unpackaged/main/default/objects/SOX_Audit_Request__c/SOX_Audit_Request__c.object-meta.xml
<CustomObject>
    <label>SOX Audit Request</label>
    <nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>SOX Audit Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOX Audit Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>