unpackaged/main/default/objects/SOX_Audit_Request__c/fields/AR_Adjustment_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>AR_Adjustment_Client_Name__c</fullName>
    <label>AR Adjustment Client Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>