unpackaged/main/default/objects/SOX_Audit_Request__c/fields/Carpet_Planner_Invoice_A_or_B__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Planner_Invoice_A_or_B__c</fullName>
    <label>Carpet Purchase Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>