unpackaged/main/default/objects/SOX_Audit_Request__c/fields/DCS_FA_Signature__c.field-meta.xml
<CustomField>
    <fullName>DCS_FA_Signature__c</fullName>
    <label>DCS/FA Signature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>