unpackaged/main/default/objects/SOX_Audit_Request__c/fields/DCS_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>DCS_Signed_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>