unpackaged/main/default/objects/SOX_Audit_Request__c/fields/GES_Caused_Graphics_Credit__c.field-meta.xml
<CustomField>
    <fullName>GES_Caused_Graphics_Credit__c</fullName>
    <inlineHelpText>Select Yes when a credit was applied to the invoice due to GES due to graphics timelines.</inlineHelpText>
    <label>GES Caused Graphics Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>