unpackaged/main/default/objects/SOX_Audit_Request__c/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <label>Reason for Rejection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect record type selected.</fullName>
            </value>
            <value>
                <fullName>Update the DCS field to the correct DCS in the production location.</fullName>
            </value>
            <value>
                <fullName>Complete the remaining applicable fields in the AR Adjustment in Contract.</fullName>
            </value>
            <value>
                <fullName>Upload the preliminary invoice signed &amp; dated by CSM.</fullName>
            </value>
            <value>
                <fullName>Subtotals from the Summary of Services &amp; the Details of Services do not match.</fullName>
            </value>
            <value>
                <fullName>All items and services must have a price, no zeros allowed.</fullName>
            </value>
            <value>
                <fullName>Upload the fully executed contract.</fullName>
            </value>
            <value>
                <fullName>Order Status Report is not clear of all exceptions.</fullName>
            </value>
            <value>
                <fullName>The preliminary invoice compared to what is booked in Core, does not match.</fullName>
            </value>
            <value>
                <fullName>Backup documentation is needed.</fullName>
            </value>
            <value>
                <fullName>Missing the client&#39;s approval signature.</fullName>
            </value>
            <value>
                <fullName>Email approval must state the preliminary invoice total within the email body or in the subject line.</fullName>
            </value>
            <value>
                <fullName>Pricing Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>