unpackaged/main/default/objects/SOX_Audit_Request__c/fields/Reference_pages_in_Contract__c.field-meta.xml
<CustomField>
    <fullName>Reference_pages_in_Contract__c</fullName>
    <inlineHelpText>Enter the pages in the contract that are applicable to adjustments.</inlineHelpText>
    <label>Reference pages in Contract</label>
    <type>TextArea</type>
</CustomField>