unpackaged/main/default/objects/SOX_Audit_Request__c/fields/SA_AR_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>SA_AR_Adjustment_Amount__c</fullName>
    <label>AR Adjustment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>