unpackaged/main/default/objects/SOX_Audit_Request__c/fields/SA_AR_Reason_for_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>SA_AR_Reason_for_Adjustment__c</fullName>
    <label>AR Reason for Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Allowances Other</fullName>
            </value>
            <value>
                <fullName>CAD Operator Allowance</fullName>
            </value>
            <value>
                <fullName>Facility Commission</fullName>
            </value>
            <value>
                <fullName>Flex Spending/New Idea</fullName>
            </value>
            <value>
                <fullName>Marketworks</fullName>
            </value>
            <value>
                <fullName>Rebates</fullName>
            </value>
            <value>
                <fullName>Sales Allowance</fullName>
            </value>
            <value>
                <fullName>Show Organizer Commission</fullName>
            </value>
            <value>
                <fullName>Signing Bonus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>