unpackaged/main/default/objects/SOX_Audit_Request__c/fields/SA_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>SA_Opportunity__c</fullName>
    <formula>SA_Project_Central_Show__r.Opportunity_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>