unpackaged/main/default/objects/SOX_Audit_Request__c/fields/SA_Order_Confirmation_SIGNED_DATED__c.field-meta.xml
<CustomField>
    <fullName>SA_Order_Confirmation_SIGNED_DATED__c</fullName>
    <inlineHelpText>Uploaded, signature and date stamped</inlineHelpText>
    <label>Preliminary Invoice (SIGNED &amp; DATED)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes- Upload Form</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>