unpackaged/main/default/objects/SOX_Audit_Request__c/fields/SA_Show_Name__c.field-meta.xml
<CustomField>
    <fullName>SA_Show_Name__c</fullName>
    <formula>SA_Project_Central_Show__r.Show_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Name</label>
    <type>Text</type>
</CustomField>