unpackaged/main/default/objects/SOX_Audit_Request__c/fields/SA_Show_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SA_Show_Start_Date__c</fullName>
    <formula>SA_Project_Central_Show__r.Show_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Start Date</label>
    <type>Date</type>
</CustomField>