unpackaged/main/default/objects/SOX_Audit_Request__c/fields/Show_weight_recap__c.field-meta.xml
<CustomField>
    <fullName>Show_weight_recap__c</fullName>
    <label>Show weight recap</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>