unpackaged/main/default/objects/SOX_Audit_Request__c/fields/SR_Client_Services_Manager_Signature__c.field-meta.xml
<CustomField>
    <fullName>SR_Client_Services_Manager_Signature__c</fullName>
    <inlineHelpText>Requestor/Owner</inlineHelpText>
    <label>Client Services Manager Signature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>