unpackaged/main/default/objects/SOX_Audit_Request__c/fields/SR_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>SR_Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>