unpackaged/main/default/objects/SOX_Audit_Request__c/fields/Supporting_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Documentation__c</fullName>
    <inlineHelpText>Examples: Labor tickets, Vendor invoices, Client approved documentation on non-contractual pricing- individual email quotes, Pricing spreadsheet, Estimate form, etc.</inlineHelpText>
    <label>Supporting Documentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>