unpackaged/main/default/objects/SOX_Audit_Request__c/recordTypes/Electrical_Only_Show.recordType-meta.xml
<RecordType>
    <fullName>Electrical_Only_Show</fullName>
    <active>true</active>
    <label>Electrical Only Show</label>
</RecordType>