unpackaged/main/default/objects/SOX_Audit_Request__c/recordTypes/X250000_or_less.recordType-meta.xml
<RecordType>
    <fullName>X250000_or_less</fullName>
    <active>true</active>
    <description>Revenue less than or equal to $250,000</description>
    <label>$250,000 or less</label>
</RecordType>