unpackaged/main/default/objects/SOX_Audit_Request__c/recordTypes/X250001_no_client_approval.recordType-meta.xml
<RecordType>
    <fullName>X250001_no_client_approval</fullName>
    <active>true</active>
    <description>Revenue $250,001 or more NO CLIENT approval</description>
    <label>Greater than $250,001 no client approval</label>
</RecordType>