unpackaged/main/default/objects/SOX_Audit_Request__c/recordTypes/X250001_with_client_sign_off_on_order_confirmation.recordType-meta.xml
<RecordType>
    <fullName>X250001_with_client_sign_off_on_order_confirmation</fullName>
    <active>true</active>
    <description>Revenue $250,001 or more with Client Sign Off</description>
    <label>Greater than $250,001 with client sign off on order confirmation</label>
</RecordType>