unpackaged/main/default/objects/SOX_Audit_Request__c/recordTypes/X50000_or_less.recordType-meta.xml
<RecordType>
    <fullName>X50000_or_less</fullName>
    <active>true</active>
    <description>Revenue less than or equal to $50,000</description>
    <label>$50,000 or less</label>
</RecordType>