unpackaged/main/default/objects/SOX_Audit_Request__c/recordTypes/X50001_no_client_approval.recordType-meta.xml
<RecordType>
    <fullName>X50001_no_client_approval</fullName>
    <active>true</active>
    <description>Revenue $50,001 or more NO CLIENT approval</description>
    <label>Greater than $50,001 no client approval</label>
</RecordType>