unpackaged/main/default/objects/SOX_Audit_Request__c/validationRules/SOX_Audit_Date_for_Auditor.validationRule-meta.xml
<ValidationRule>
    <fullName>SOX_Audit_Date_for_Auditor</fullName>
    <active>true</active>
    <description>Requires a date to be entered when a signature is present</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(SR_Auditor_BPT_Signature__c)),  
          ISBLANK(Auditor_Signed_Date__c)
    )</errorConditionFormula>
    <errorDisplayField>Auditor_Signed_Date__c</errorDisplayField>
    <errorMessage>Please enter a Date for signature</errorMessage>
</ValidationRule>