unpackaged/main/default/objects/SOX_Audit_Request__c/validationRules/SOX_Audit_Request_Date_for_CSM.validationRule-meta.xml
<ValidationRule>
    <fullName>SOX_Audit_Request_Date_for_CSM</fullName>
    <active>true</active>
    <description>Requires a date to be entered when a signature is present</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(SR_Client_Services_Manager_Signature__c)),
        ISBLANK(CSM_Signed_Date__c)
    )</errorConditionFormula>
    <errorDisplayField>CSM_Signed_Date__c</errorDisplayField>
    <errorMessage>Please enter a Date for signature</errorMessage>
</ValidationRule>