unpackaged/main/default/objects/SOX_Audit_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SA_Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>SA_Project_Number__c</columns>
    <columns>SA_Show_Name__c</columns>
    <columns>Show_End_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <label>My Audit Requests</label>
</ListView>