unpackaged/main/default/objects/SOX_Audit_Request__c/listViews/DCS_Michael_R_Review_Audit_Requests.listView-meta.xml
<ListView>
    <fullName>DCS_Michael_R_Review_Audit_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>SR_Audit_Claimed_By__c</columns>
    <columns>SR_Submitted_Date__c</columns>
    <columns>Show_End_Date__c</columns>
    <columns>SA_Show_Name__c</columns>
    <columns>SA_Opportunity__c</columns>
    <columns>SA_Project_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted to DCS/FA</value>
    </filters>
    <filters>
        <field>SR_DCS_or_FA_lookup__c</field>
        <operation>equals</operation>
        <value>Rebecca Lamb Bridgeforth</value>
    </filters>
    <label>DCS Becky B. Audit Requests</label>
</ListView>