unpackaged/main/default/objects/SOX_Audit_Request__c/listViews/Not_Submitted.listView-meta.xml
<ListView>
    <fullName>Not_Submitted</fullName>
    <columns>NAME</columns>
    <columns>SA_Opportunity__c</columns>
    <columns>Show_End_Date__c</columns>
    <columns>SA_Show_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Not Submitted</label>
</ListView>