unpackaged/main/default/objects/SOX_Audit_Request__c/listViews/X04_Complete_Review_Audit_Requests.listView-meta.xml
<ListView>
    <fullName>X04_Complete_Review_Audit_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>SR_Audit_Claimed_By__c</columns>
    <columns>SR_Submitted_Date__c</columns>
    <columns>Show_End_Date__c</columns>
    <columns>SA_Show_Name__c</columns>
    <columns>SA_Opportunity__c</columns>
    <columns>SA_Project_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>SA_Show_Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>04 Complete Review Audit Requests</label>
</ListView>